===============================================================================
19.3.0
More constexpr, template aliases and inline variables.

===============================================================================
19.2.1
Fixed version number retrieval from Github.

===============================================================================
19.2.0
Security flag for a string is copied on assignment or copy constructor.
etl::format_spec may now be a constexpr.
Added AVR check to nullptr.h

===============================================================================
19.1.0
Refactor of etl::buffer_descriptors interface.

===============================================================================
19.0.0
Containers with external buffers or pools are now separate classes instead of specialisations.

etl::circular_buffer<T, 0> => etl::circular_buffer_ext<T>
etl::forward_list<T, 0>    => etl::forward_list_ext<T>
etl::list<T, 0>            => etl::list_ext<T>
etl::string<0>             => etl::string_ext
etl::wstring<0>            => etl::wstring_ext
etl::u16string<0>          => etl::u16string_ext
etl::u32string<0>          => etl::u32string_ext
etl::vector<T, 0>          => etl::vector_ext<T>

===============================================================================
18.20.2
Fixed etl::to_string for floating point numbers between 0 & -1.0

===============================================================================
18.20.1
Resolved issue with zero length literals for etl::make_string (again!)
Remove redundant test support code.
Disabled ASAN option in Visual Studio project.

===============================================================================
18.20.0
Added etl::buffer_descriptors.
Added std/etl pair conversions.
Added etl::make_string_view.
Resolved issue with zero length literals for etl::make_string
Resolved etl::flags constexpr issues.
Added atomics for clang.
Resolved type_traits issues for GCC < v5
