@@ -135,6 +135,19 @@ namespace etl
   };
 
   //***************************************************************************
+  /// Exception for incompatible order state list.
+  //***************************************************************************
+  class fsm_state_list_order_exception : public etl::fsm_exception
+  {
+  public:
+
+    fsm_state_list_order_exception(string_type file_name_, numeric_type line_number_)
+      : etl::fsm_exception(ETL_ERROR_TEXT("fsm:state list order", ETL_FILE"D"), file_name_, line_number_)
+    {
+    }
+  };
+
+  //***************************************************************************
   /// Interface class for FSM states.
   //***************************************************************************
   class ifsm_state
@@ -225,11 +238,12 @@ namespace etl
       state_list       = p_states;
       number_of_states = etl::fsm_state_id_t(size);
 
-      ETL_ASSERT((number_of_states > 0), ETL_ERROR(etl::fsm_state_list_exception));
+      ETL_ASSERT(number_of_states > 0, ETL_ERROR(etl::fsm_state_list_exception));
 
       for (etl::fsm_state_id_t i = 0; i < size; ++i)
       {
-        ETL_ASSERT((state_list[i] != ETL_NULLPTR), ETL_ERROR(etl::fsm_null_state_exception));
+        ETL_ASSERT(state_list[i] != ETL_NULLPTR, ETL_ERROR(etl::fsm_null_state_exception));
+        ETL_ASSERT(state_list[i]->get_state_id() == i, ETL_ERROR(etl::fsm_state_list_order_exception));
         state_list[i]->set_fsm_context(*this);
       }
     }
@@ -267,7 +281,7 @@ namespace etl
     //*******************************************
     /// Top level message handler for the FSM.
     //*******************************************
-    void receive(const etl::imessage& message) ETL_OVERRIDE
+    void receive(const etl::imessage& message)
     {
       static etl::null_message_router nmr;
       receive(nmr, message);
@@ -276,7 +290,7 @@ namespace etl
     //*******************************************
     /// Top level message handler for the FSM.
     //*******************************************
-    void receive(imessage_router& source, etl::message_router_id_t destination_router_id, const etl::imessage& message) ETL_OVERRIDE
+    void receive(imessage_router& source, etl::message_router_id_t destination_router_id, const etl::imessage& message)
     {
       if ((destination_router_id == get_message_router_id()) || (destination_router_id == imessage_router::ALL_MESSAGE_ROUTERS))
       {
@@ -287,7 +301,7 @@ namespace etl
     //*******************************************
     /// Top level message handler for the FSM.
     //*******************************************
-    void receive(etl::imessage_router& source, const etl::imessage& message) ETL_OVERRIDE
+    void receive(etl::imessage_router& source, const etl::imessage& message)
     {
         etl::fsm_state_id_t next_state_id = p_state->process_event(source, message);
         ETL_ASSERT(next_state_id < number_of_states, ETL_ERROR(etl::fsm_state_id_exception));
@@ -317,7 +331,7 @@ namespace etl
     /// Does this FSM accept the message id?
     /// Yes, it accepts everything!
     //*******************************************
-    bool accepts(etl::message_id_t) const ETL_OVERRIDE
+    bool accepts(etl::message_id_t) const
     {
       return true;
     }
